--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-    <title>NatureValley | Exciting tours in nature</title>
+    <title>NatureValley | Exciting Tours in Nature</title>
 </head>
 
 <body>
