--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class="logo-box">
             <img src="img/logo-white.png" alt="Logo" class="logo">
         </div>
+
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">NatureValley</span>
+            <span class="heading-primary-main">where wife happens</span>
+        </h1>
     </header>
 
 </body>
