--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h1 class="heading-primary">
             <span class="heading-primary-main">NatureValley</span>
-            <span class="heading-primary-sub">where life happens</span>
+            <span class="heading-primary-sub">Where Life Happens</span>
         </h1>
     </header>
 
