Sass branch testing

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
 
         <h1 class="heading-primary">
-            <span class="heading-primary-main">NatureValley</span>
-            <span class="heading-primary-sub">Where Life Happens</span>
+            <span class="heading-primary-main">Nature Valley</span>
+            <span class="heading-primary-sub">Where life happens</span>
         </h1>
     </header>
 
